--- a/client/app/map/map.html
+++ b/client/app/map/map.html
@@ -12,18 +12,14 @@
   <div class = 'col-md-12 col-sm-12 col-xs-12'>
   <h4>Map: {{mapName}}</h4>
     <ng-map height="1000px" default-style="true" center="current-location" zoom="14">
-      <marker on-mouseover="map.showInfoWindow('usernameInfo')" ng-repeat="client in tempDataStore" position="{{client.latitude}},{{client.longitude}}" class="mark" icon = {{client.userPic}}></marker>
-      
-      <info-window id="usernameInfo" visible-on-marker="foo">
-    <div ng-non-bindable>
-      <div id="siteNotice"></div>
-      <h1 id="firstHeading" class="firstHeading">Uluru</h1>
-      <div id="bodyContent">
-        {{ user.userName }}
-      </div>
-    </div>
-  </info-window>
-
+      <div ng-repeat="client in tempDataStore">
+        <marker position="{{client.latitude}},{{client.longitude}}" class="mark" on-mouseover="map.showInfoWindow('usernameInfo')" ></marker>   
+        <info-window id="usernameInfo" visible-on-marker="foo">
+          <div id="bodyContent">
+            {{ client.userName }}
+          </div>
+        </info-window>
+     </div>
     </ng-map>
   </div>
   
