--- a/client/app/map/map.html
+++ b/client/app/map/map.html
@@ -1,12 +1,13 @@
-
 <div ng-init='init()'>
   <div id='map'>
-    <div class='navbar col-md-4 col-sm-4 col-xs-6 col-md-offset-4 col-sm-offset-4 col-xs-offset-6'>
+    <h1 class = 'jumbotron'>Hacker Tracker
+    <div class='navbar col-md-3 col-sm-3 col-xs-6 col-md-offset-9 col-sm-offset-9 col-xs-offset-6'>
       <ul class='nav'>
         <li><a href='#/facebook' class='index' ng-click="logOut()">Home</a></li>
         <li><a href='#/logout' class='create' ng-click="logOut(true)">Logout</a></li>
       </ul>
     </div>
+    </h1>
   </div>
 
   <div class = 'col-md-12 col-sm-12 col-xs-12'>
