--- a/client/app/map/map.html
+++ b/client/app/map/map.html
@@ -8,11 +8,10 @@
       </ul>
     </div>
   </div>
-
   <div class = 'col-md-12 col-sm-12 col-xs-12'>
   <h4>Map: {{mapName}}</h4>
     <ng-map height="1000px" default-style="true" center="current-location" zoom="14">
-      <marker on-mouseover="map.showInfoWindow('usernameInfo')" ng-repeat="client in tempDataStore" position="{{client.latitude}},{{client.longitude}}" class="mark" icon = {{client.userPic}}></marker>
+      <marker on-mouseover="map.showInfoWindow('usernameInfo')" ng-repeat="client in tempDataStore" position="{{client.latitude}},{{client.longitude}}" class="mark" icon =  ></marker>
       
       <info-window id="usernameInfo" visible-on-marker="foo">
     <div ng-non-bindable>
