--- a/client/app/map/map.html
+++ b/client/app/map/map.html
@@ -6,6 +6,11 @@
     </h1>
   </div>
 
+  <div>
+  message: 
+    <input ng-model='user.message' ng-submit='postMessage()'></input>
+  </div>
+
   <div class = 'col-md-12 col-sm-12 col-xs-12'>
   <h4>Map: {{mapName}}</h4>
     <ng-map height="1000px" default-style="true" center="current-location" zoom="14">
