--- a/client/app/map/map.html
+++ b/client/app/map/map.html
@@ -6,9 +6,11 @@
     </h1>
   </div>
 
-  <div>
+  <div class="chatbox">
   message: 
-    <input ng-model='user.message' ng-submit='postMessage()'></input>
+    <form ng-submit='postMessage()'>
+      <input ng-model='user.message'></input>
+    </form>
   </div>
 
   <div class = 'col-md-12 col-sm-12 col-xs-12'>
