--- a/client/app/map/map.html
+++ b/client/app/map/map.html
@@ -21,6 +21,7 @@
         <info-window id="usernameInfo" visible-on-marker="foo">
           <div id="bodyContent">
             {{ client.userName }}
+            {{  client.message }}
           </div>
         </info-window>
      </div>
