--- a/client/app/map/map.html
+++ b/client/app/map/map.html
@@ -9,12 +9,12 @@
   
 
   <div class = 'col-md-12 col-sm-12 col-xs-12'>
-  <h4>Map: {{mapName}}</h4>
+  <h4>Welcome to {{mapName}}!</h4>
     <ng-map height="1000px" default-style="true" center="current-location" zoom="14">
     <div class="chatbox">
-    message: 
+    Message: 
       <form ng-submit='test(map, "usernameInfo")'>
-        <input ng-model='user.message'></input>
+        <input ng-model='user.message' placeholder="Begin your chat here!"></input>
       </form>
     </div>
       <div ng-repeat="client in tempDataStore">
@@ -27,6 +27,11 @@
         </info-window>
      </div>
     </ng-map>
+   <!--  edits-groupchat log -->
+     <div class="groupChat">
+      Chatlog:
+        <form>
+        <form>
   </div>
   
 </div>
