change url name

--- a/client/index.html
+++ b/client/index.html
@@ -23,7 +23,7 @@
     </script>-->
     <script>
       // var socket = io.connect('http://hacker-tracker.herokuapp.com/');
-      var socket = io.connect('http://limitless-oasis-6389.herokuapp.com/')
+      var socket = io.connect('http://ge0chat.herokuapp.com/')
     </script>
 
     <script src="/socket.io/socket.io.js"></script>
