--- a/client/app/map/map.html
+++ b/client/app/map/map.html
@@ -11,8 +11,12 @@
     <ng-map height="1000px" default-style="true" center="current-location" zoom="14">
     <div class="chatbox">
     Message: 
-      <form ng-submit='submitMessage(map, "usernameInfo")'>
-        <input ng-model='user.message'></input>
+      <form>
+        <div class="form-group">
+          <label>Message</label>
+          <input placeholder="Type a message" ng-model='user.message'></input>
+        </div>
+        <button type="submit" class="btn btn-default" ng-submit='submitMessage(map, "usernameInfo")'>Submit</button>
       </form>
     </div>
     <div ng-repeat="client in tempDataStore">
