--- a/client/app/map/map.html
+++ b/client/app/map/map.html
@@ -1,6 +1,6 @@
 <div ng-init='init()'>
   <div id='map'>
-    <h1 class = 'jumbotron'>Hacker Tracker
+    <h1 class = 'jumbotron'>GeoChat
       <a href='#/facebook' class='index' ng-click='logOut()' style='float: left'>Home</a>
       <a href='#/logout' class='create' ng-click='logOut(true)' style='float: right'>Log Out</a>
     </h1>
