--- a/client/app/mapMaker/mapMaker.html
+++ b/client/app/mapMaker/mapMaker.html
@@ -1,4 +1,4 @@
-<h1 class = 'jumbotron'>Hacker Tracker</h1>
+<h1 class = 'jumbotron'>GeoChat</h1>
 <div id='mapMaker'>
   <div class='navbar col-md-4 col-sm-4 col-xs-6 col-md-offset-4 col-sm-offset-4 col-xs-offset-6' >
     <div class='nav'>
@@ -7,7 +7,7 @@
     <form name='mapMaker' ng-submit="setup()" class='col-md-12'>
       <input name='mapName' type='string'
         ng-model="mapName" class='col-md-10'
-        placeholder="Enter the name of the MapChat room" required />
+        placeholder="Enter the name of the GeoChat room" required />
       <button type="submit" value="Creator" class='col-md-2'>
         GO
       </button>
