--- a/client/app/map/map.html
+++ b/client/app/map/map.html
@@ -10,13 +10,17 @@
   <h4>Welcome to {{mapName}}!</h4>
     <ng-map height="1000px" default-style="true" center="current-location" zoom="14">
     <div class="chatbox">
-      <form>
-        <div class="form-group">
-          <label>Message</label>
-          <input placeholder="Type a message" ng-model='user.message'></input>
-        </div>
-        <button type="submit" class="btn btn-default" ng-submit='submitMessage(map, "usernameInfo")'>Submit</button>
-      </form>
+      <div class="col-md-8 col-md-offset-2">
+        <form>
+          <div class="form-group">
+            <label>Message</label>
+            <textarea class="form-control" rows="3" ng-model='user.message'></textarea>
+          </div>
+          <div class="form-group">
+            <button type="submit" class="btn btn-primary" ng-submit='submitMessage(map, "usernameInfo")'>Submit</button>
+         </div>
+         </form>
+      </div>
     </div>
     <div ng-repeat="client in tempDataStore">
       <marker position="{{client.latitude}},{{client.longitude}}" class="mark" on-mouseover="map.showInfoWindow('usernameInfo')" ></marker>   
