--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,7 @@
 <html ng-app='app'>
   <head>
     <meta charset="utf-8" />
-    <title>Hacker Tracker</title>
+    <title>GeoChat</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
     <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Lobster">
     <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Lato:400,100">
