--- a/client/app/map/map.html
+++ b/client/app/map/map.html
@@ -35,11 +35,10 @@
     <br>
     <br>
     <br>
-    <h1>All Chats</h1>
-    <div class="groupChat">
+    <h1>Chat Log</h1>
+    <div class="groupChat" style="border : solid 2px #00FFFF; background : grey; color : #00FFFF; padding : 4px; width : 700px; height : 200px; overflow : auto; ">
       <div ng-repeat="client in tempDataStore">
         <b>{{client.userName}}</b>: {{ client.message }}
-      </div>
     </div>
   </div>
 
