--- a/client/app/map/map.html
+++ b/client/app/map/map.html
@@ -6,38 +6,37 @@
     </h1>
   </div>
 
-  <div class = 'col-md-12 col-sm-12 col-xs-12 text-center'>
-  <h4>Welcome to {{mapName}}!</h4>
-    <ng-map height="1000px" default-style="true" center="current-location" zoom="14">
-    <div class="chatbox">
-      <div class="col-md-8 col-md-offset-2">
-        <form>
-          <div class="form-group">
-            <textarea class="form-control" rows="3" ng-model='user.message' placeholder="Enter chat message here"></textarea>
-          </div>
-          <div class="form-group">
-            <button type="submit" class="btn btn-primary" ng-submit='submitMessage(map, "usernameInfo")'>Submit message</button>
-         </div>
-         </form>
+  <div class="container">
+    <div class='col-md-6'>
+      <ng-map height="1000px" default-style="true" center="current-location" zoom="14">
+        <div ng-repeat="client in tempDataStore">
+          <marker position="{{client.latitude}},{{client.longitude}}" class="mark" on-mouseover="map.showInfoWindow('usernameInfo')" ></marker>
+          <info-window id="usernameInfo" visible-on-marker="foo">
+            <div id="bodyContent">
+              {{ user.userName }} <br>
+              {{ user.message }}
+            </div>
+          </info-window>
+        </div>
+      </ng-map>    
+    </div>
+    <div class='col-md-6'>
+      <h4>Welcome to {{mapName}}!</h4>
+      <form>
+        <div class="form-group">
+          <textarea class="form-control" rows="3" ng-model='user.message' placeholder="Enter chat message here"></textarea>
+        </div>
+        <div class="form-group">
+          <button type="submit" class="btn btn-default" ng-submit='submitMessage(map, "usernameInfo")'>Submit message</button>
+       </div>
+      </form>
+      <div class="chatlog">
+        <h4>All Chats</h4>
+        <ul>
+          <li>some chats</li>
+          <li>some other chat</li>
+        </ul>
       </div>
     </div>
-    <div ng-repeat="client in tempDataStore">
-      <marker position="{{client.latitude}},{{client.longitude}}" class="mark" on-mouseover="map.showInfoWindow('usernameInfo')" ></marker>   
-      <info-window id="usernameInfo" visible-on-marker="foo">
-        <div id="bodyContent">
-          {{ user.userName }} <br>
-          {{ user.message }}
-        </div>
-      </info-window>
-    </div>
-    </ng-map>
-    <br>
-    <br>
-    <br>
   </div>
-  <h1>Chat Log</h1>
-  <div class="groupChat" style="border : solid 2px #00FFFF; background : grey; color : #00FFFF; padding : 4px; width : 700px; height : 200px; overflow : auto; ">
-  </div>
-
-  
 </div>
