--- a/client/index.html
+++ b/client/index.html
@@ -2,6 +2,8 @@
 <html ng-app='app'>
   <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <title>GeoChat</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
     <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Lobster">
