--- a/client/index.html
+++ b/client/index.html
@@ -20,12 +20,12 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular-route.js"></script>
 
     <script src="/socket.io/socket.io.js"></script>
-    <!--<script>
+    <script>
       var socket = io.connect('http://localhost:8000');
-    </script>-->
+    </script>
     <script>
       // var socket = io.connect('http://hacker-tracker.herokuapp.com/');
-      var socket = io.connect('http://ge0chat.herokuapp.com/')
+      // var socket = io.connect('http://ge0chat.herokuapp.com/')
     </script>
 
     <script src="/socket.io/socket.io.js"></script>
