style changes on logo and buttons

--- a/client/app/map/map.html
+++ b/client/app/map/map.html
@@ -1,8 +1,8 @@
 <div ng-init='init()'>
   <div id='map'>
-    <h1 class = 'jumbotron'>GeoChat
-      <a href='#/facebook' class='index' ng-click='logOut()' style='float: left'>Home</a>
-      <a href='#/logout' class='create' ng-click='logOut(true)' style='float: right'>Log Out</a>
+    <h1 class = 'jumbotron'>mapchat
+      <a href='#/facebook' class='index' ng-click='logOut()' style='float: left'>HOME</a>
+      <a href='#/logout' class='create' ng-click='logOut(true)' style='float: right'>LOGOUT</a>
     </h1>
   </div>
 
