--- a/client/app/facebook/facebook.html
+++ b/client/app/facebook/facebook.html
@@ -1,8 +1,8 @@
-<h1 class = 'jumbotron'>GeoChat</h1>
+<h1 class = 'jumbotron'>MapChat</h1>
 <div id = 'facebook'>
   <div class='navbar col-md-4 col-sm-4 col-xs-6 col-md-offset-4 col-sm-offset-4 col-xs-offset-6'>
     <div class='nav'>
-      <li><a href='#/mapMaker' class='create'>Create a GeoChat!</a></li>
+      <li><a href='#/mapMaker' class='create'>Create a MapChat!</a></li>
       <li><a ng-click="logout()" href='#/logout' class='logout'>Logout</a></li>
 
     </div>
