changed all logout buttone to images

--- a/client/app/facebook/facebook.html
+++ b/client/app/facebook/facebook.html
@@ -3,7 +3,7 @@
   <div class='navbar col-md-4 col-sm-4 col-xs-6 col-md-offset-4 col-sm-offset-4 col-xs-offset-6'>
     <div class='nav'>
       <li><a href='#/mapMaker' class='create'>Create a mapchat!</a></li>
-      <li class="facebook-logout"><a ng-click="logout()" href='#/logout' class='logout'><span class="glyphicon glyphicon-off big" aria-hidden="true"></span></a></li>
+      <li class="facebook-logout"><a ng-click="logout()" href='#/logout' class='logout'><span class="glyphicon glyphicon-off small" aria-hidden="true"></span></a></li>
 
     </div>
 
