--- a/client/app/mapMaker/mapMaker.html
+++ b/client/app/mapMaker/mapMaker.html
@@ -2,7 +2,7 @@
 <div id='mapMaker'>
   <div class='navbar col-md-4 col-sm-4 col-xs-6 col-md-offset-4 col-sm-offset-4 col-xs-offset-6' >
     <div class='nav'>
-      <li><a ng-click="logout()" href='#/logout' class='logout'>Logout</a></li>
+      <li><a ng-click="logout()" href='#/logout' class='logout'><span class="glyphicon glyphicon-off small" aria-hidden="true"></span></a></li>
     </div>
     <form name='mapMaker' ng-submit="setup()" class='col-md-12'>
       <input name='mapName' type='string'
