--- a/client/app/map/map.html
+++ b/client/app/map/map.html
@@ -49,11 +49,13 @@
   </div>
   <br>
   <div class='col-md-offset-2 col-md-4'>
-  Meeting Address
     <form>
-      <input ng-model='address'></input>
+      <div class="form-group">
+        <label>Meeting Address</label>
+        <input class="form-control" ng-model='address'></input>
+      </div>
+      <button class="btn btn-default" ng-click='placeMarker(map, address)'>Confirm Location</button>
+      <button class="btn btn-default" ng-click='markAddress(map)'>Get Directions</button>
     </form>
-    <button ng-click='placeMarker(map, address)'>Confirm Location</button>
-    <button ng-click='markAddress(map)'>Get Directions</button>
   </div>
 </div>
