--- a/client/app/map/map.html
+++ b/client/app/map/map.html
@@ -48,15 +48,17 @@
     </div>
   </div>
   <br>
-  <div class='col-md-offset-1 col-md-2'>
-  Meeting Address
+  <div class='col-md-offset-1 col-md-3'>
     <form>
-      <input ng-model='address'></input>
+      <div class="form-group">
+        <label>Meeting Address</label>
+        <input class="form-control" ng-model='address'></input>
+      </div>
+      <button class="btn btn-default" ng-click='confirmAddress()'>Confirm Location</button>
+      <button class="btn btn-default" ng-click='getDirections()'>Get Directions</button>
     </form>
-    <button ng-click='confirmAddress()'>Confirm Location</button>
-    <button ng-click='getDirections()'>Get Directions</button>
   </div>
   <br>
-  <div class='col-md-3' id='confirmation'>
+  <div class='col-md-1' id='confirmation'>
   </div>
 </div>
