--- a/client/app/map/map.html
+++ b/client/app/map/map.html
@@ -49,6 +49,7 @@
   </div>
   <br>
   <div class='col-md-offset-1 col-md-3'>
+  <br>
     <form>
       <div class="form-group">
         <label>Meeting Address</label>
@@ -60,5 +61,6 @@
   </div>
   <br>
   <div class='col-md-1' id='confirmation'>
+    <p ng-model='realAddress'>{{realAddress}}</p>
   </div>
 </div>
