--- a/client/app/map/map.html
+++ b/client/app/map/map.html
@@ -18,7 +18,7 @@
             </div>
           </info-window>
         </div>
-        <marker position="{{address}}"
+        <marker position="{{realAddress}}"
           centered="true">
         </marker>
       </ng-map>    
